--- a/ChatterBox/package.json
+++ b/ChatterBox/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
