--- a/ChatterBox/package.json
+++ b/ChatterBox/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "node backend/server/index.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -13,8 +14,12 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.18.0",
+    "graphql": "^15.8.0",
     "mongoose": "^8.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
