--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-chat-engine": "^1.11.28",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
